# transactionflow

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  rustfmt.toml
migrations/: 20250302070414_create_user_table.sql  20250302075445_create_categories_table.sql  20250302080755_create_transactions_table.sql
src/: main.rs  utils.rs
src/controllers/: auth.rs  categories.rs  me.rs  mod.rs  transactions.rs
src/db/: categories.rs  mod.rs  transactions.rs  user.rs
src/middleware/: auth.rs
