[package]
name = "moneyflow"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "tls-rustls",
  "macros",
  "chrono",
  "rust_decimal",
] }
tokio = { version = "1.43.0", features = ["full"] }
